# ESP32-DevKitC-V4

./: README.md
Debugging/debuggug_first/: CMakeLists.txt  sdkconfig  sdkconfig.old
Debugging/debuggug_first/main/: Kconfig.projbuild
GPIOS/ADC/main/: main.c
GPIOS/DAC/DAC/main/: main.c
GPIOS/Inputs/gpio-inputs/: CMakeLists.txt
GPIOS/hallSensor/: CMakeLists.txt
GPIOS/hallSensor/main/: main.c
GPIOS/interruts/gpio-interrupts/: CMakeLists.txt
GPIOS/ledc-and-pwm/: CMakeLists.txt  sdkconfig  sdkconfig.old
GPIOS/ledc-and-pwm/main/: main.c
GPIOS/touchPins/: CMakeLists.txt
GPIOS/touchPins/main/: main.c
Internet Connection/Internet-connection-example/: CMakeLists.txt  sdkconfig
Internet Connection/Internet-connection-example/main/: CMakeLists.txt  main.c
Internet Connection/NTP-Sync/: CMakeLists.txt  sdkconfig.old
Internet Connection/NTP-Sync/main/: main.c
Internet Connection/Wifi-Scanning/: CMakeLists.txt
Internet Connection/Wifi-Scanning/main/: main.c
Internet Connection/wifiConnect/main/: main.c
UART/UART/main/: main.c
sleeping/Deep-Sleep-GPIO-EXIT1/: CMakeLists.txt
sleeping/Deep-Sleep-GPIO-EXIT1/main/: main.c
sleeping/Hibernation/: CMakeLists.txt
sleeping/Hibernation/main/: main.c
sleeping/deep-sleep-with-gpio/: CMakeLists.txt
sleeping/deep-sleep-with-gpio/main/: main.c
sleeping/deep-sleep-with-timer/: CMakeLists.txt
sleeping/deep-sleep-with-timer/main/: main.c
sleeping/light-sleep-wakeup-with-gpio/: CMakeLists.txt  sdkconfig
sleeping/light-sleep-wakeup-with-gpio/main/: main.c
sleeping/light-sleep-with-timer/: CMakeLists.txt
sleeping/light-sleep-with-timer/main/: main.c
(+5 files in other folders)
